--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,27 @@
-plugins {
-    id 'java'
-}
-
 group 'com.abosen'
 version '1.0-SNAPSHOT'
 
-sourceCompatibility = 1.8
-repositories {
-    maven{ url 'http://maven.aliyun.com/nexus/content/groups/public'}}
 
-dependencies {
-    testCompile 'junit:junit:4.12'
+allprojects {
+    apply plugin: 'java'
+    sourceCompatibility = 1.8
+    repositories {
+        maven { url 'http://maven.aliyun.com/nexus/content/groups/public' }
+    }
+
+    dependencies {
+        implementation 'junit:junit:4.12'
+        testImplementation 'junit:junit:4.12'
+
+        implementation 'org.projectlombok:lombok:1.18.6'
+        annotationProcessor 'org.projectlombok:lombok:1.18.6'
+        testAnnotationProcessor 'org.projectlombok:lombok:1.18.6'
+
+        implementation 'org.slf4j:slf4j-api:1.7.26'
+        testImplementation 'org.slf4j:slf4j-api:1.7.26'
+        implementation 'ch.qos.logback:logback-classic:1.2.3'
+        testImplementation 'ch.qos.logback:logback-classic:1.2.3'
+
+    }
+
 }
